--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1641,8 +1641,8 @@ zh:
   label_irm_portlet: Portlet
   label_irm_portlet_new: 新建 Portlet
   label_irm_portlet_code: 编码
-  label_irm_portlet_controller: 控制器名称
-  label_irm_portlet_action: 请求 Action
+  label_irm_portlet_controller: 页面Contrller
+  label_irm_portlet_action: 页面Action
   label_irm_portlet_default_flag: 默认显示
   portlet_default_flag_yes: 是
   portlet_default_flag_no: 否
