调整布局格式的提示信息

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1644,5 +1644,5 @@ en:
   label_irm_portal_layout_name: Layout Name
   label_irm_portal_layout_description: Layout Description
   label_irm_portal_layout_format: Layout Format
-  label_irm_portal_layout_format_error: Only numbers splited by comma,eg. 1,2,2
+  label_irm_portal_layout_format_error: Only numbers（1 or 2） splited by comma,eg. 1,2,2
   #=======================  portal layouts====================
