添加取消设置的资源文件

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1637,6 +1637,7 @@ en:
   label_irm_portlet_name: Name
   label_irm_portlet_description: Description
   label_irm_portlet_custom_home_page: Add modulde
+  lable_irm_portlet_cancle_button: Cancle Setting
   #======================= end Portlets====================
 
   #======================= portal layouts ====================
