--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1651,6 +1651,7 @@ zh:
   label_irm_portlet_description: 描述
   label_irm_portlet_custom_home_page: 添加显示模块
   label_irm_portlet_change_layout: 设置页面布局
+  lable_irm_portlet_cancle_button: 取消
   #======================= end Portlets====================
 
   #======================= portal layouts ====================
