将原来的portal_layout在当前页面设置修改为在弹出窗口中设置并直接显示预览效果

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1638,6 +1638,7 @@ en:
   label_irm_portlet_description: Description
   label_irm_portlet_custom_home_page: Add modulde
   lable_irm_portlet_cancle_button: Cancle Setting
+  label_irm_portlet_select_layout: Select A Layout：
   #======================= end Portlets====================
 
   #======================= portal layouts ====================
