事故单回复页面增加 永久关闭 和 重新打开 按钮

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -29,6 +29,8 @@ en:
   active: Active
   add: Add
   close: Close
+  permanent_close: Permanently Close
+  reopen: Reopen
   copy:  Copy
   operation: Options
   content: Content
