--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1022,6 +1022,7 @@ zh:
   label_irm_business_object_api: API信息
   label_irm_object_attribute_new_table_column: 新建数据库属性
   label_irm_object_attribute_new_model_attribute: 新建model属性
+  label_irm_business_object_data_access_flag: 访问权限控制
   #======================== business objects====================
   #======================== object attributes====================
   label_irm_object_attributes: 属性
@@ -1671,3 +1672,13 @@ zh:
   label_irm_session_time_out: 会话超时
   label_irm_session_time_out_value: 超时值
   #=======================  portal layouts====================
+
+  #=========================    irm data accesses=======================#
+  label_irm_data_access: 访问权限
+  label_irm_data_access_list: 访问权限列表
+  label_irm_data_access_new: 新建访问权限
+  label_irm_data_access_edit: 编辑访问权限
+  label_irm_data_access_business_object: 对像
+  label_irm_data_access_access_level: 默认访问权限
+  label_irm_data_access_all_business_object: 所有对像
+  #=========================end irm data accesses=======================#
