--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -149,6 +149,7 @@ en:
   label_icm_incident_request_relation: Related Requests
   label_icm_incident_request_incident_category: Category
   label_icm_incident_request_incident_sub_category: Subcategory
+  label_icm_incident_request_relation_type: The Relation
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
