--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -149,6 +149,7 @@ zh:
   label_icm_incident_request_incident_category: 分类
   label_icm_incident_request_incident_sub_category: 子分类
   label_icm_create_relate_change_request: 创建RFC
+  label_icm_incident_request_relation_type: 关联为
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: 转交组
