--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1684,4 +1684,8 @@ zh:
   label_irm_data_access_business_object: 对像
   label_irm_data_access_access_level: 默认访问权限
   label_irm_data_access_all_business_object: 所有对像
+  label_irm_data_access_org_not_set: 未设置
+  label_irm_data_access_org_access_level: 组织层
+  label_irm_data_access_opu_access_level: 运维中心层
+  label_irm_data_access_org: 组织层访问权限
   #=========================end irm data accesses=======================#
