修复Bug #878  为用户选择支持组时，界面提示信息不够明确

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -796,7 +796,7 @@ en:
   label_irm_select_result: Select Result
   label_irm_group_member_group_list: List Support Group List
   label_irm_group_member_info: Support Group Member
-  label_irm_group_member_select_group: Select Group
+  label_irm_group_member_select_group: Select Group For User
   #=========================end irm  support_group_controller=======================#
   #=========================    irm filters_controller=======================#
   label_irm_filter: Filter
