修复Bug #1167  菜单安全控件下部分功能无法正常使用 中的权限 功能已修复

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -269,6 +269,9 @@ en:
   icm_rule_settinglabel_irm_permission_product_name: Product
   label_irm_permission_page_controller: Controller
   label_irm_permission_page_action: Action
+  label_irm_permission_param_count: Parameter Count
+  label_irm_permission_direct_get_flag: GET Method
+  label_irm_permission_function_name: Function Name
   label_irm_permission_status_code: Status
   label_irm_permission_list: Permissions List
   label_irm_permission_product_name: Product
