--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -265,6 +265,9 @@ zh:
   icm_rule_settinglabel_irm_permission_product_name: 模块
   label_irm_permission_page_controller: Controller
   label_irm_permission_page_action: Action
+  label_irm_permission_param_count: 参数数量
+  label_irm_permission_direct_get_flag: GET方法
+  label_irm_permission_function_name: 功能名称
   label_irm_permission_status_code: 状态
   label_irm_permission_list: 权限列表
   label_irm_permission_product_name: 所属模块
