--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1725,5 +1725,5 @@ zh:
   label_irm_organization_info_value: 值
   label_irm_organization_info_file: 附件
   label_irm_organization_info_description: 描述
-
+  label_irm_edit_attachment: 修改
   #=========================end organization_infos=======================#
