--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -48,6 +48,7 @@ zh:
   label_skm_entry_header_doc_number: 文章编码
   label_skm_entry_header_status_code: 文档状态
   label_skm_entry_header_published_date: 发布日期
+  label_skm_entry_header_author_name: 提交人
   label_skm_entry_header_history_list: 历史版本列表
   notice_skm_entry_step_1_desc: 选择一个知识文章模板，模板将决定随后创建的文章结构。
   notice_skm_entry_step_2_desc: 根据步骤1中所选模板的结构，填入文章内容
@@ -60,10 +61,17 @@ zh:
   label_skm_entry_header_search_by_title: 搜索文章
   label_skm_entry_header_my_favorites: 我的收藏
   label_skm_entry_header_my_favorites_list: 我收藏的文章列表
+  label_skm_entry_header_my_unpublished_list: 我未发布的文章列表
+  label_skm_entry_header_wait_my_approve_list: 待我审核的文章列表
+
   label_skm_my_drafts: 我的草稿
   error_choice_template: 先选择一个模板
   label_action_my_favorites: 我的收藏
   label_action_my_drafts: 我的草稿
+  label_action_wait_my_approve: 知识审核
+  label_action_approve: 通过
+  label_action_reject: 拒绝
+  label_action_my_unpublished: 我的未发布知识
   label_action_index_search: 搜索结果
   label_action_new_step_1: 新建, 步骤1
   label_action_new_step_2: 新建, 步骤2
