变更单中添加审批状态显示

--- a/config/locales/chm/zh.yml
+++ b/config/locales/chm/zh.yml
@@ -66,6 +66,8 @@
   label_chm_change_request_incident: 关联的事故单
   label_chm_change_request_plan: 变更计划
   label_chm_change_request_implement: 实施任务
+  label_chm_change_request_approve: 审批状态
+  label_chm_change_request_approve_wait: 等待审批
   label_chm_change_request_summary: 描述
   label_chm_change_request_base_info: 变更单基础信息
   label_chm_change_request_additional_info: 变更单附加信息
