为全局设置页面添加上传图片的错误提示

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -305,6 +305,7 @@ en:
   label_irm_global_setting_logo: Logo
   recommended_size: Recommended Resolution
   label_irm_global_setting_error_page_info: Error Page Info
+  label_irm_global_setting_file_limit_tip: Upload File Size Exceeded Limit
   #=========================    end global_settings_controller=======================#
   #=========================    irm auth_sources_controller=======================#
   label_irm_auth_source_name: Name
