--- a/config/locales/csi/zh.yml
+++ b/config/locales/csi/zh.yml
@@ -49,6 +49,7 @@ zh:
    label_csi_survey_validate_password: 验证问卷密码
    label_csi_survey_closed_datetime: 关闭时间
    label_csi_survey_response_list: 调查问卷填写列表
+   label_csi_survey_date: 日期
    #========================= end   csi surveys_controller=======================#
    #========================= start csi survey_subjects_controller=======================#
    label_csi_survey_subject: 题目
