--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1740,3 +1740,15 @@ zh:
   #======================= Report incident request month processing time ============
   label_report_submitted_date_and_priority: 报告日期/优先级
   #================================================================================
+
+  #========================= incident_amount_by_month_cate report ====================================
+  label_report_icm_incident_category: 类别
+  label_report_icm_incident_months: 一月,二月,三月,四月,五月,六月,七月,八月,九月,十月,十一月,十二月,合计
+  label_report_icm_incident_total:  合计
+  label_report_icm_incident_params_year:  年份
+  label_report_icm_incident_params_ym_s:  月份从
+  label_report_icm_incident_params_ym_e:  月份至
+  label_report_icm_incident_params_month:  月份
+  label_report_icm_incident_report_date:  报告日期
+  label_report_icm_incident_prior:  优先级
+  #========================== end incident_amount_by_month_cate report  ===============================
